cmake_minimum_required(VERSION 3.17)
project(Cpp_Exercise)

set(CMAKE_CXX_STANDARD 11)


add_subdirectory(chap00-ClassicQes)
add_subdirectory(16-Inherit)
add_subdirectory(17-Polymorphic)
add_subdirectory(18-ObjectModel)
add_subdirectory(19-AbstractClass)
add_subdirectory(20-MultiInherit)
add_subdirectory(chap21-FunctionTemplate)
add_subdirectory(chap22-ClassTemplate)
add_subdirectory(chap23-ArrayClassTemplate)
add_subdirectory(chap24-SmartPointer)
add_subdirectory(chap25-SingleInstance)
add_subdirectory(chap26-Exception)
add_subdirectory(chap27-DynamicType)
add_subdirectory(chap28-TypeCast)