project(18-ObjectModel)

add_executable(18-1_StructClassSizeof 18-1_StructClassSizeof.cpp)
add_executable(18-2_thisPointer 18-2_thisPointer.cpp)
add_executable(18-3_thisPointer 18-3_main.c 18-3_thisPointer.c)
add_executable(18-4_InheritObjectModel 18-4_InheritObjectModel.cpp)
add_executable(18-5_main 18-5_main.c 18-5_CPolymorphic.c)