project(21-FunctionTemplate)


add_executable(21-1_swapNum 21-1_swapNum.cpp)
add_executable(21-2_FunctionTemplate 21-2_FunctionTemplate.cpp)
add_executable(21-3_FunctionTemplateCompile 21-3_FunctionTemplateCompile.cpp)
add_executable(21-4_TypeofParaReturn 21-4_TypeofParaReturn.cpp)
add_executable(21-5_OverloadingVSFunctionTemplate 21-5_OverloadingVSFunctionTemplate.cpp)