project(chap26-Exception)

add_executable(26-1_CException 26-1_CException.cpp)
add_executable(26-2_CppException 26-2_CppException.cpp)
add_executable(26-3_ExceptionCatchMatch 26-3_ExceptionCatchMatch.cpp)

add_executable(26-4_ThrowExceptionInCatch 26-4_ThrowExceptionInCatch.cpp)
add_executable(26-5_CustomizeException 26-5_CustomizeException.cpp)