cmake_minimum_required(VERSION 3.14)
project(Interview)

set(CMAKE_CXX_STANDARD 11)

add_executable(01-01_satisfyCookie 01-美团/01-01_satisfyCookie.cpp)
add_executable(01-02_numOfPromotion 01-美团/01-02_numOfPromotion.cpp)
add_executable(01-03_rotarySushi 01-美团/01-03_rotarySushi.cpp)

add_executable(02-01_ClockinScenicSpots 02-01_ClockinScenicSpots.cpp )

add_executable(03-01_MathPro 03-01_MathPro.cpp)
add_executable(03-2_01bag 03-2_01bag.cpp)